Top 10 list: #1 badge overlaps with list title (bugid:5266)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@38347 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/TopLists/css/list.scss
+++ b/extensions/wikia/TopLists/css/list.scss
@@ -27,7 +27,7 @@ $item-width: 415px;
 	ul {
 		list-style-type: none;
 		padding: 0;
-		margin: 0;
+		margin: 30px 0 0 0;
 		
 		li {
 			@include border-radius(5px);
